# ai-email-assistance

./: main.py  pyproject.toml
app/api/: webhook.py
app/core/: embeddings.py  summarizer.py
app/db/: db.py  qdrant.py
app/db/models/: __init__.py  email.py  user.py
